--- a/app/views/welcome/index.html.slim
+++ b/app/views/welcome/index.html.slim
@@ -1,2 +1,3 @@
-h1 Welcome#index
-p Find me in app/views/welcome/index.html.slim
+.wrapper.ta-center
+  h1 Welcome#index
+  p Find me in app/views/welcome/index.html.slim
